// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AvailableResourceListing /> with multiple resources should render correctly 1`] = `
<div
  className="AvailableResourceListing"
  data-testid="AvailableResourceListing"
>
  <div
    className="PaginatedListing"
    data-testid="PaginatedListing"
  >
    <div
      className="Listing"
      data-testid="Listing"
    >
      <div
        className="AvailableResourceListingItem"
        data-testid="AvailableResourceListingItem"
      >
        <div
          className="ListingItem"
          data-testid="ListingItem"
        >
          <div
            className="text-center sm:text-left sm:flex sm:justify-between sm:items-center"
          >
            <div>
              <div
                className="flex items-center justify-center sm:justify-start"
              >
                <div
                  className="line-through"
                >
                  Resource1
                </div>
              </div>
              <div
                className="error-text italic text-xs"
              >
                Already added
              </div>
            </div>
            <div
              className="mt-5 sm:mt-0 sm:ml-5"
            >
              <button
                className="btn btn-primary"
                data-testid="AddResourceButton"
                disabled={true}
                onClick={[Function]}
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  fill="white"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="AvailableResourceListingItem"
        data-testid="AvailableResourceListingItem"
      >
        <div
          className="ListingItem"
          data-testid="ListingItem"
        >
          <div
            className="text-center sm:text-left sm:flex sm:justify-between sm:items-center"
          >
            <div>
              <div
                className="flex items-center justify-center sm:justify-start"
              >
                <div
                  className=""
                >
                  Resource2
                </div>
              </div>
            </div>
            <div
              className="mt-5 sm:mt-0 sm:ml-5"
            >
              <button
                className="btn btn-primary"
                data-testid="AddResourceButton"
                onClick={[Function]}
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  fill="white"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="AvailableResourceListingItem"
        data-testid="AvailableResourceListingItem"
      >
        <div
          className="ListingItem"
          data-testid="ListingItem"
        >
          <div
            className="text-center sm:text-left sm:flex sm:justify-between sm:items-center"
          >
            <div>
              <div
                className="flex items-center justify-center sm:justify-start"
              >
                <div
                  className="line-through"
                >
                  Resource3
                </div>
              </div>
              <div
                className="error-text italic text-xs"
              >
                Already added
              </div>
            </div>
            <div
              className="mt-5 sm:mt-0 sm:ml-5"
            >
              <button
                className="btn btn-primary"
                data-testid="AddResourceButton"
                disabled={true}
                onClick={[Function]}
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  fill="white"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="mt-8 flex justify-center"
    >
      <div
        className="Pagination"
        data-testid="Pagination"
      >
        <button
          className="Page"
          data-testid="Page"
          onClick={[Function]}
          type="button"
        >
          1
        </button>
        <button
          className="Page"
          data-testid="Page"
          onClick={[Function]}
          type="button"
        >
          2
        </button>
        <button
          className="SelectedPage"
          data-testid="Page"
          onClick={[Function]}
          type="button"
        >
          3
        </button>
        <button
          className="Page"
          data-testid="Page"
          onClick={[Function]}
          type="button"
        >
          4
        </button>
        <button
          className="Page"
          data-testid="Page"
          onClick={[Function]}
          type="button"
        >
          5
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AvailableResourceListing /> without resources should render correctly 1`] = `
<div
  className="AvailableResourceListing"
  data-testid="AvailableResourceListing"
>
  <div
    className="PaginatedListing"
    data-testid="PaginatedListing"
  >
    <div
      className="Listing"
      data-testid="Listing"
    />
    <div
      className="mt-8 flex justify-center"
    >
      <div
        className="Pagination"
        data-testid="Pagination"
      >
        <button
          className="Page"
          data-testid="Page"
          onClick={[Function]}
          type="button"
        >
          1
        </button>
        <button
          className="Page"
          data-testid="Page"
          onClick={[Function]}
          type="button"
        >
          2
        </button>
        <button
          className="SelectedPage"
          data-testid="Page"
          onClick={[Function]}
          type="button"
        >
          3
        </button>
        <button
          className="Page"
          data-testid="Page"
          onClick={[Function]}
          type="button"
        >
          4
        </button>
        <button
          className="Page"
          data-testid="Page"
          onClick={[Function]}
          type="button"
        >
          5
        </button>
      </div>
    </div>
  </div>
</div>
`;
